fix errors in loading the page.  + add other domains
fixes some page load errors in some circumstances, and caters for more AWS SSO scenarios.
also adds other console domains.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "AWS SSO Colourise",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"description": "Change the AWS navbar colour based on account (and a few other little niceties)",
 	"manifest_version": 3,
 	"action": {
@@ -15,11 +15,17 @@
 		"clipboardWrite"
     ],
 	"host_permissions": [
-		"*://*.console.aws.amazon.com/*"
+		"*://*.console.aws.amazon.com/*",
+		"*://*.console.amazonaws.cn/*",
+		"*://*.console.amazonaws-us-gov.com/*"
 	],
 	"content_scripts": [
 		{
-		  "matches": ["*://*.console.aws.amazon.com/*"],
+		  "matches": [
+			"*://*.console.aws.amazon.com/*",
+			"*://*.console.amazonaws.cn/*",
+			"*://*.console.amazonaws-us-gov.com/*"
+		],
 		  "js": ["main.js"]
 		}
 	]
